# CNN_Parking_FPGA

./: .dockerignore  .gitignore  Dockerfile  README.md  README.txt  conv1_pool1.cpp  coords.json  docker-compose.yml  dump_intermediate.py  emptyparkingspotdetectionmodel.py  emptyparkingspotdetectionsystem.py  export_weights.py  label_coords.py  make_golden.py  parking_detection.ipynb  parking_live.py  parking_server.py  parking_setup_v2.html  parkingspotcoordinate.py  prepare_dataset.py  readme.txt  requirements.txt  run_all.sh  setup.sh  tb_conv1_pool1.cpp
code/: api_server.py  capture_rtsp.py  coords_video.json  gestion_des_frames.py  parking_api.py  send_rois_to_fpga.py  send_uart.py  watch_and_send_fpga_results.py
config/: coords.json  parking-api.service  parking-fpga.service  parking-pipeline.service  parking-uart.service  settings.json
conv1_pool1_v4/: create_vivado_project.tcl  export_ip.tcl  regen_golden.py  run_all.tcl  vivado.jou  vivado_136628.backup.jou  vivado_136744.backup.jou  vivado_137463.backup.jou  vivado_153374.backup.jou
conv1_pool1_v4/ip_repo/conv1_pool1_extracted/drivers/conv1_pool1_v1_0/src/: CMakeLists.txt  xconv1_pool1.h
conv2_pool2_v1/: export_ip.tcl  regen_golden.py  run_all.tcl
conv3_v1/: export_ip.tcl  run_all.tcl
ihm/: squelette_parking.html
old/: README_Raspberry.md  label_coords.py  parking_setup_server_v2.py  parkingspotcoordinate.py  readme.txt  rstp_yolo.py
scripts/: export_weights.py  export_weights_h.py  regen_golden.py  train.py
vivado/: create_vivado_2ips.tcl
vivado_2ips/: create_vivado_2ips.tcl  vivado.jou
(+1306 files in other folders)
